--- a/src/app/log-in/delete-employee.component.html
+++ b/src/app/log-in/delete-employee.component.html
@@ -2,18 +2,20 @@
     <div class="container">
         <div class="row loginform">
             <div class="col w-100 text-center text-success">
-                <span class="heading fs-1">
+                <span class="heading fs-2">
                     LOG IN
                 </span>
             </div>
             <div class="col w-75 mt-3">
-                <form>
-                    <label for="username" class="form-label">User Name :</label>
-                    <input type="text" id="username" class="form-control" placeholder="user name">
+                <form [formGroup]="logInForm">
+                    <label for="username" class="form-label">Email :</label>
+                    <input type="text" id="username" formControlName="email" class="form-control" placeholder="email">
+                    <small class="text-danger" *ngIf="logInForm.get('email').invalid && logInForm.get('email').touched">User name or email id is note correct!</small><br>
                     <label for="password"class="form-label mt-2">Password:</label>
-                    <input type="password" id="password" placeholder="password"  class="form-control">
+                    <input type="password" id="password" formControlName="password" placeholder="password"  class="form-control">
+                    <small class="text-danger" *ngIf="logInForm.get('password').invalid && logInForm.get('password').touched">password is note correct!</small><br>
                     <div class="col text-center">
-                        <button type="submit"  class="bg-success btn mt-4 text-white">Log in </button>
+                        <button type="submit" [disabled]="logInForm.invalid" (click)="logInSubmit()" class="bg-success btn mt-4 text-white">Log in </button>
 
                     </div>
                     
