--- a/src/app/empolyee/empolyee.component.css
+++ b/src/app/empolyee/empolyee.component.css
@@ -13,6 +13,13 @@ header {
     font-size: 14px;
 }
 
+.closeLogin {
+    display: none;
+}
+.profileName{
+    display: none;
+}
+
 .mainComponent {
     width: 100%;
     height: 500px;
