--- a/src/app/empolyee/empolyee.component.html
+++ b/src/app/empolyee/empolyee.component.html
@@ -9,10 +9,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active " routerLink="addEmployee">Add Employee</a>
+            <a class="nav-link active " routerLink="addEmployee" [class.profileName]="profileView">Add Employee</a>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-outline-success log_btn" (click)="logOut()" [class.profileName]="profileView" type="submit">log Out</button>
           </li>
         </ul>
         <form class="d-flex " role="search">
@@ -53,9 +56,9 @@
               <td>{{i.position}}</td>
               <td>{{i.address}}</td>
               <td>{{i.salary}}</td>
-              <td><a routerLink="editEmployee/{{i._id}}"> <em title="Edit"><i
+              <td [class.profileName]="profileView"><a routerLink="editEmployee/{{i._id}}"> <em title="Edit"><i
                       class="fa-regular fa-pen-to-square edit_btn"></i></em></a></td>
-              <td>
+              <td [class.profileName]="profileView">
                 <!-- Button trigger modal -->
                 <button type="button" class="delete_btn" (click)="delete(i._id,i.fullname)" data-bs-toggle="modal"
                   data-bs-target="#exampleModal">
